<resources>
  <string name="app_name">LendBook</string>
  <string name="title">LENDBOOK</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="sign_in">Sign In</string>
  <string name="facebook">Facebook</string>
  <string name="no_account_register">Don\'t have an account? Sign up here!</string>
  <string name="date_of_birth">Date of birth</string>
  <string name="username">Username</string>
  <string name="confirm_password">Confirm password</string>
  <string name="sign_up">Sign up</string>
  <string name="age">Age</string>
  <string name="no_books">You didn\'t add any book so far</string>
  <string name="add_to_the_bookshelf">Add to the bookshelf</string>
  <string name="cancel">Cancel</string>
</resources>