<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  tools:context=".login.ui.LoginActivity">

  <EditText
    android:id="@+id/mailLogin"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="40dp"
    android:autofillHints=""
    android:backgroundTint="@color/primaryColorLogin"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:minHeight="48dp"
    android:textColor="@color/white"
    android:textColorHint="@color/textLogin"
    android:textColorLink="@color/textLogin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title"
    tools:ignore="TextContrastCheck" />

  <EditText
    android:id="@+id/passwordLogin"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="20dp"
    android:autofillHints=""
    android:backgroundTint="@color/primaryColorLogin"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColor="@color/white"
    android:textColorHint="@color/textLogin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mailLogin"
    tools:ignore="TextContrastCheck" />

  <ImageView
    android:id="@+id/background_pic"
    android:layout_width="164dp"
    android:layout_height="132dp"
    android:layout_marginTop="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_book_login"
    tools:ignore="ImageContrastCheck" />

  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/title"
    android:textColor="@color/primaryColorLogin"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/background_pic"
    tools:ignore="TextContrastCheck" />

  <TextView
    android:id="@+id/registerText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:clickable="true"
    android:text="@string/no_account_register"
    android:textColor="@color/white"
    android:textSize="17sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/textLogin"
    android:paddingVertical="10dp"
    android:text="@string/facebook"
    app:cornerRadius="15dp"
    app:layout_constraintEnd_toEndOf="@+id/signButton"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/signButton"
    app:layout_constraintTop_toBottomOf="@+id/signButton" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/signButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="30dp"
    android:backgroundTint="@color/primaryColorLogin"
    android:paddingVertical="10dp"
    android:text="@string/sign_in"
    app:cornerRadius="15dp"
    app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
    app:layout_constraintStart_toStartOf="@+id/passwordLogin"
    app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>
